--- a/package.json
+++ b/package.json
@@ -1,23 +1,49 @@
 {
   "name": "tree-sitter-po",
-  "version": "1.0.0",
-  "description": "GNU Gettext PO files grammar for tree-sitter",
+  "version": "0.0.1",
+  "description": "PO grammar for tree-sitter",
   "main": "bindings/node",
-  "scripts": {
-    "build": "tree-sitter generate",
-    "test": "tree-sitter generate && tree-sitter parse examples/test.po"
-  },
   "keywords": [
-    "parse",
+    "parser",
+    "lexer",
     "po",
     "gettext"
   ],
-  "author": "Erasin Wang",
+  "author": "Erasin Wang <erasinoo@gmail.com>",
+  "contributors": [
+    "Amaan Qureshi <amaanq12@gmail.com>"
+  ],
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/erasin/tree-sitter-po/issues"
+  },
+  "homepage": "https://github.com/erasin/tree-sitter-po#readme",
   "dependencies": {
     "nan": "^2.17.0"
   },
   "devDependencies": {
+    "eslint": "^8.35.0",
+    "eslint-config-google": "^0.14.0",
     "tree-sitter-cli": "^0.20.7"
-  }
+  },
+  "repository": "https://github.com/erasin/tree-sitter-po",
+  "scripts": {
+    "build": "tree-sitter generate && node-gyp build",
+    "lint": "eslint grammar.js",
+    "parse": "tree-sitter parse",
+    "test": "tree-sitter test && script/parse-examples",
+    "test-windows": "tree-sitter test"
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.po",
+      "file-types": [
+        "po"
+      ],
+      "injection-regex": "^(po)$",
+      "highlights": [
+        "queries/highlights.scm"
+      ]
+    }
+  ]
 }
